<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_avatar_right"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_name_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/StemRegular11Black"
        android:text="@string/itemchat_right_name"
        app:layout_constraintStart_toStartOf="@id/iv_avatar_right"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar_right"
        />


    <ImageView
        android:id="@+id/iv_bubble_big_right"
        android:layout_width="233dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toTopOf="@id/iv_avatar_right"
        app:layout_constraintEnd_toStartOf="@id/iv_avatar_right"
        />

    <TextView
        android:id="@+id/tv_message_right"
        android:text="@string/itemchat_right_message"
        android:gravity="start|center_vertical"
        style="@style/StemRegular14White"
        android:layout_width="195dp"
        android:layout_height="36dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="@id/iv_bubble_big_right"
        app:layout_constraintTop_toTopOf="@id/iv_bubble_big_right"
        app:layout_constraintBottom_toBottomOf="@id/iv_bubble_big_right"
        />

    <TextView
        android:id="@+id/tv_time_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itemchat_right_time"
        style="@style/StemLight10Grey"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toStartOf="@id/iv_bubble_big_right"
        app:layout_constraintTop_toTopOf="@id/iv_bubble_big_right"
        app:layout_constraintBottom_toBottomOf="@id/iv_bubble_big_right"
        />

</android.support.constraint.ConstraintLayout>